login, home, profile, report first version

--- a/public/index.html
+++ b/public/index.html
@@ -22,21 +22,30 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular-animate.js" charset="utf-8"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-moment/0.10.3/angular-moment.min.js" charset="utf-8"></script>
     <script src="app.js" charset="utf-8"></script>
     <script src="components/login/loginCtrl.js" charset="utf-8"></script>
     <script src="components/login/loginService.js" charset="utf-8"></script>
     <script src="components/home/homeCtrl.js" charset="utf-8"></script>
-    <script src="components/home/homeService.js" charset="utf-8"></script>
     <script src="components/profile/profileCtrl.js" charset="utf-8"></script>
-    <script src="components/profile/profileService.js" charset="utf-8"></script>
     <script src="components/report/reportCtrl.js" charset="utf-8"></script>
-    <script src="components/report/reportService.js" charset="utf-8"></script>
     <script src="components/admin/adminCtrl.js" charset="utf-8"></script>
-    <script src="components/admin/adminService.js" charset="utf-8"></script>
     <script src="components/directives/register/registerDirective.js" charset="utf-8"></script>
     <script src="components/directives/NewPost/NewPostDirective.js" charset="utf-8"></script>
     <script src="components/directives/posted/postedDirective.js" charset="utf-8"></script>
     <script src="components/directives/reportFilter/reportFilterDirective.js" charset="utf-8"></script>
+    <script src="components/directives/profileCard/profileCardDirective.js" charset="utf-8"></script>
+    <script src="components/directives/fishOfTheDay/fishOfTheDayDirective.js" charset="utf-8"></script>
+    <script src="components/directives/following/followingDirective.js" charset="utf-8"></script>
+    <script src="components/directives/navBar/navBarDirective.js" charset="utf-8"></script>
+    <script src="components/services/userService.js" charset="utf-8"></script>
+    <script src="components/services/postService.js" charset="utf-8"></script>
+
+
+
+
+
 
 
 
