--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.8/semantic.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/login.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/profile.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/home.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="css/report.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/main.css" media="screen" title="no title" charset="utf-8">
     <link rel="shortcut icon" href="css/img/justFishBlackLogo.png"/>
     <meta charset="utf-8">
     <title>utahanglers.club</title>
@@ -30,7 +28,6 @@
     <script src="components/home/homeCtrl.js" charset="utf-8"></script>
     <script src="components/profile/profileCtrl.js" charset="utf-8"></script>
     <script src="components/report/reportCtrl.js" charset="utf-8"></script>
-    <script src="components/admin/adminCtrl.js" charset="utf-8"></script>
     <script src="components/directives/register/registerDirective.js" charset="utf-8"></script>
     <script src="components/directives/newPosts/newPostsDirective.js" charset="utf-8"></script>
     <script src="components/directives/posted/postedDirective.js" charset="utf-8"></script>
